--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id = "content">
 
         <p> Much content</p>
-        <img src="http://s32.postimg.org/yt4i6o02d/logo.png">
+        <img src="http://s32.postimg.org/mezwx7js5/blog.png">
 
     </div>
 
