Exam, html for add complete

--- a/add.html
+++ b/add.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>add</title>
+    <link type = "text/css" rel="stylesheet" href="stylesheet.css" />
 </head>
+
 <body>
 
+<div id = "header">
+
+    <h1>myBlog</h1>
+    <p>because the internet needs to know what i think</p>
+
+</div>
+
+<div id = "navigation">
+
+    <a href="blog.html">All Blog Items</a>
+    <a href="blog.html">Work Items</a>
+    <a href="blog.html">University Items</a>
+    <a href="blog.html">Family Items</a>
+    <a href="add.html">Insert Blog Items</a>
+
+</div>
+
+<div id = "content">
+
+    <div id = "form">
+
+        <form>
+
+            <label>Enter Title:</label>     <input type="text" name="Title_box" required> <br>
+            <label>Enter Summary:</label>   <input type="text" name="Summary_box" required> <br>
+            <label>Category:</label>        <input type="text" name="Category_box" required> <br>
+            <label>Submitted By:</label>    <input type="text" name="Submit_box" required> <br>
+
+            <input id = button type="submit" value="submit">
+
+
+        </form>
+
+
+    </div>
+
+</div>
+
+<div id = "footer">
+
+    <p>Designed by Connor Rose, 2016</p>
+
+</div>
+
 </body>
+
 </html>
