Exam, html for add complete

--- a/add.html
+++ b/add.html
@@ -34,7 +34,7 @@
             <label>Enter Title:</label>     <input type="text" name="Title_box" required> <br>
             <label>Enter Summary:</label>   <input type="text" name="Summary_box" required> <br>
             <label>Category:</label>        <input type="text" name="Category_box" required> <br>
-            <label>Submitted By:</label>    <input type="text" name="Submit_box" required> <br>
+            <label>Submitted By:</label>    <input type="text" name="Submit_box"> <br>
 
             <input id = button type="submit" value="submit">
 
