--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>add</title>
+    <link type = "text/css" rel="stylesheet" href="stylesheet.css" />
 </head>
+
 <body>
 
+<div id = "header">
+
+    <h1>myBlog</h1>
+    <p>because the internet needs to know what i think</p>
+
+</div>
+
+<div id = "navigation">
+
+    <a href="blog.html">All Blog Items</a>
+    <a href="blog.html">Work Items</a>
+    <a href="blog.html">University Items</a>
+    <a href="blog.html">Family Items</a>
+    <a href="add.html">Insert Blog Items</a>
+
+</div>
+
+<div id = "content">
+
+    <p>Today at work by Adam</p> <br>
+    <p>Work</p> <br>
+    <p>Today I went to work and did lots of very complicated coding things. I was very pleased that I managed to finish them all </p> <br>
+
+</div>
+
+<div id = "footer">
+
+    <p>Designed by Connor Rose, 2016</p>
+
+</div>
+
 </body>
+
 </html>
