Exam, html for add complete

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 
     <div id = "content">
 
+        <div id = "text">
         <p> Much content</p>
-        <img src="http://s32.postimg.org/mezwx7js5/blog.png">
+        </div>
 
+        <div id = "pic">
+        <img src="http://s32.postimg.org/mezwx7js5/blog.png">
+        </div>
     </div>
 
     <div id = "footer">
