Exam, html for add complete

--- a/blog.html
+++ b/blog.html
@@ -27,11 +27,18 @@
 
 <div id = "content">
 
-    <div id = "blogtext">
+    <div id = "blogtext1">
     <p>Today at work by Adam</p> <br>
     <p>Work</p> <br>
     <p>Today I went to work and did lots of very complicated coding things. I was very pleased that I managed to finish them all </p> <br>
     </div>
+
+    <div id = "blogtext2">
+    <p>Today at work by Adam</p> <br>
+    <p>Work</p>
+    <br><p>Today I went to work and did lots of very complicated coding things. I was very pleased that I managed to finish them all </p> <br>
+    </div>
+
 </div>
 
 <div id = "footer">
