Exam, html for add complete

--- a/blog.html
+++ b/blog.html
@@ -34,9 +34,9 @@
     </div>
 
     <div id = "blogtext2">
-    <p>Today at work by Adam</p> <br>
-    <p>Work</p>
-    <br><p>Today I went to work and did lots of very complicated coding things. I was very pleased that I managed to finish them all </p> <br>
+    <p>University Lecturer by Brian </p> <br>
+    <p>University</p>
+    <br><p>This week in university I had an amazing lecture. I can’t remember the name of the lecturer but he was really really good. </p> <br>
     </div>
 
 </div>
